@@ -11,6 +11,7 @@ NOW=`date +%Y%m/%d`
 
 echo "You need to edit this script and remove the next line, exiting" >&2
 echo "Add your hostname below and specify the directories to backup" >&2
+zenity --error --title "rdup @ $HOSTNAME" --text "Edit this file before running it" >&2
 exit 1 # REMOVE THIS
 
 ##
